--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ function step() { // clicks button
 function updateCountdown() { // updates the cooldown timer
 	if(countdown>50) countdown = countdown-50;
 if(countdown<=50&&countdown>=0) countdown = 0;
+update("countdownDisplay",countdown/1000); // update the displayed time
 }
 setInterval(updateCountdown,50);
 </script>
@@ -25,6 +26,7 @@ setInterval(updateCountdown,50);
 <body>
 Number: <div id="numDisplay">1</div>
 <button onclick="step()">Multiply the number by 1.5</button>
+You can multiply the number again in <div id="countdownDisplay">0</div> seconds.
 </body>
 </html>
 
