--- a/index.html
+++ b/index.html
@@ -4,29 +4,86 @@
 <script>
 var num = 1; // number that we are increasing
 var countdown = 0; // counter for the button cooldown
+var notation = 0;// standard notation - clearly the best notation!
+var currentTab = "main";
+	var notationArray = ["Standard","Scientific","Engineering","Logarithm"];
 function update(set,get){ // for updating display
 	document.getElementById(set).innerHTML=get
+}
+function showElement(elementID) { // makes an element visible
+	document.getElementById(elementID).style.display="inline-block";
+}
+function hideElement(elementID) { // makes an element invisible
+	document.getElementById(elementID).style.display="none";
+}
+function abbreviate(i) {
+	if(i==0) return "K"; // thousand
+	if(i==1) return "M"; // million
+	if(i==2) return "B"; // billion
+	var units = ["","U","D","T","Qa","Qt","Sx","Sp","O","N"]; // prefixes for ones place
+	var tens = ["","Dc","Vg","Tg","Qd","Qi","Se","St","Og","Nn"]; // prefixes for tens place
+	var hundreds = ["","Ce","Dn","Tc","Qe","Qu","Sc","Si","Oe","Ne"]
+	var i2=Math.floor(i/10);
+	var i3=Math.floor(i2/10);
+	var unit = units[i%10];
+	var ten = tens[i2%10];
+	var hundred = hundreds[i3%10];
+	return unit+ten+hundred;
+}
+function format(a) { // formats numbers for display
+	var e = Math.floor(Math.log10(a)); // exponent of number
+	var m = Math.round(Math.pow(10,Math.log10(a)-e)*1000)/1000; // mantissa of number
+	if (m>9.9995) { // would round up to 10; this avoids a problem
+		m = 1;
+		e++;
+	}
+	if(a<1000) return Math.round(a*1000)/1000; // show up to 3 places
+	if (notation==1) return m+"e"+e; // scientific notation
+	if (notation==3) return "e"+(Math.round(1000*Math.log10(a))/1000); // log notation
+	var e2 = 3*Math.floor(e/3); // exponent for engineering notation
+	var m2 = Math.round(1000*m*Math.pow(10,e-e2))/1000; // base in engineering and standard notations
+	if(notation==0) return m2+abbreviate(e2/3-1); // standard notation
+	if(notation==2) return m2+"e"+e2; // engineering notation
 }
 function step() { // clicks button
 	if(countdown==0) {
 		num = num*1.5; // updates number
-		update("numDisplay",num); // update number on the page
+		update("numDisplay",format(num)); // update number on the page
 		countdown = 3000; // reset cooldown timer
+		update("countdownDisplay",3); 
 	}
 	else return 0;
 }
-function updateCountdown() { // updates the cooldown timer
-	if(countdown>50) countdown = countdown-50;
-if(countdown<=50&&countdown>=0) countdown = 0;
-update("countdownDisplay",countdown/1000); // update the displayed time
+function switchNotation() { // for switching between notations
+	notation++;
+	if(notation>notationArray.length-1) notation=0;
+	update("notationDisplay",notationArray[notation]);
 }
-setInterval(updateCountdown,50);
+function switchTab(tabName) { // alternates between the various tabs
+	hideElement(currentTab);
+	showElement(tabName);
+	currentTab=tabName;
+}
+function updateThings() { // various updates on each tick
+	update("numDisplay",format(num));
+	if(countdown>50) countdown = countdown-50;
+	if(countdown<=50&&countdown>=0) countdown = 0;
+	update("countdownDisplay",countdown/1000); // update the displayed time
+}
+setInterval(updateThings,50);
 </script>
 </head>
 <body>
 Number: <div id="numDisplay">1</div>
+<button onclick="switchTab('main')">Main</button>
+<button onclick="switchTab('options')">Options</button>
+<div id="main" style="display:inline-block">
 <button onclick="step()">Multiply the number by 1.5</button>
 You can multiply the number again in <div id="countdownDisplay">0</div> seconds.
+</div>
+<div id="options" style="display:none">
+<button onclick="switchNotation()">Notation: <div id="notationDisplay">Standard</div></button>
+</div>
 </body>
 </html>
 
