--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ You can multiply the number again in <div id="countdownDisplay">0</div> seconds.
 </div>
 <div id="options" style="display:none">
 <button onclick="save()">Save</button>
-<button onclick="importGame()">import</save>
+<button onclick="importGame()">Import</save>
 <button onclick="exportGame()">Export</button>
 <button onclick="switchNotation()">Notation: <div id="notationDisplay">Standard</div></button>
 <button onclick="hardReset()">Reset the game</button>
