--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                 <div id="microEssenceInfo" style="display:none">Micro Essence: <div id="microEssenceDisplay">0</div></div>
                 <button class="button" onclick="switchTab('main')">Main</button>
                 <button class="button" onclick="switchTab('options')">Options</button>
+                <button class="button" onclick="switchTab('microprestige')">Micro Prestige</button>
                 <div id="main" style="display:inline-block">
                 <div id="increaseNumber">
                 <button class="button" onclick="step()">Multiply the number by <div id="multDisplay">1.5</div></button>
@@ -28,6 +29,25 @@
                         <button class="button" onclick="hardReset()">Reset the game</button>
                         <span id="exportInfo" style="display:none">Here is your export save:<input id="exportSave"></input></span>
                 </div>
+<div id="microprestige" style="display:none">
+<table>
+<tr>
+<td><button class="button" onclick="buyAupg(1)">Increase the base multiplier to 1.8667x.<br>Cost: 1 &micro;E</button></td>
+<td><button class="button" onclick="buyAupg(2)">The number increases 1.2% per order of magnitude, additive.<br>Cost: 1 &micro;E</button></td>
+<td><button class="button" onclick="buyAupg(3)">You can store up to 2 clicks, and have it act as one click.<br>Cost: 2 &micro;E</button></td>
+</tr>
+<tr>
+<td><button class="button" onclick="buyAupg(4)">Increase the base multiplier to 2.5x.<br>Cost: 5 &micro;E</button></td>
+<td><button class="button" onclick="buyAupg(5)">You start micro prestiges with the number euqal to 1000.<br>Cost: 10 &micro;E</button></td>
+<td><button class="button" onclick="buyAupg(6)">Increase the base multiplier based on number of micro prestiges.<br>Currently: <span id="A6power">1</span>x.<br>Cost: 18 &micro;E</button></td>
+</tr>
+<tr>
+<td><button class="button" onclick="buyAupg(7)">Increase the base multiplier by 5x if your number is below 1e33.<br>Cost: 50 &micro;E</button></td>
+<td><button class="button" onclick="buyRepeatA()">You gain 10% more &micro;E.<br>Currently: <span id="microEssenceMult">1</span>x.<br>Cost: <span id="RepeatACost">25</span> &micro;E</button></td>
+<td><button class="button" onclick="buyMaxRepeatA()">Max &micro;E Mult</button></td>
+</tr>
+</table>
+</div>
         </body>
 </html>
 
