give a button a name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <div id="microEssenceInfo" style="display:none">Micro Essence: <div id="microEssenceDisplay">0</div></div>
                 <button class="button" onclick="switchTab('main')">Main</button>
                 <button class="button" onclick="switchTab('options')">Options</button>
-                <button class="button" style="display:none" onclick="switchTab('microprestige')">Micro Prestige</button>
+                <button id="microPrestigeTab" class="button" style="display:none" onclick="switchTab('microprestige')">Micro Prestige</button>
                 <div id="main" style="display:inline-block">
                 <div id="increaseNumber">
                 <button class="button" onclick="step()">Multiply the number by <div id="multDisplay">1.5</div></button>
