--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </tr>
 <tr>
 <td><button class="button" onclick="buyAupg(4)">Increase the base multiplier to 2.5x.<br>Cost: 5 &micro;E</button></td>
-<td><button class="button" onclick="buyAupg(5)">You start micro prestiges with the number euqal to 1000.<br>Cost: 10 &micro;E</button></td>
+<td><button class="button" onclick="buyAupg(5)">You start micro prestiges with the number equal to 1000.<br>Cost: 10 &micro;E</button></td>
 <td><button class="button" onclick="buyAupg(6)">Increase the base multiplier based on number of micro prestiges.<br>Currently: <span id="A6power">1</span>x.<br>Cost: 18 &micro;E</button></td>
 </tr>
 <tr>
