--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <button class="button" onclick="step()">Multiply the number by <div id="multDisplay">1.5</div></button>
                 You can multiply the number again in <div id="countdownDisplay">0</div> seconds.
                 </div>
-                <button class = 'button' onclick = 'numUpgrade()'>Increase growth rate by 25 percent. Cost: <div id = 'numCost'>10</div></button>
+                <button class = 'button' onclick = 'numUpgrade()'>Increase growth rate by 25 percent. Cost: Divides your number by<div id = 'numCost'>10</div></button>
                 <div id="microPrestigeElement" style="display:none">
                 Your number has overflowed, you must reset to continue.
                 <button class="button" onclick="microPrestige()">Reset your number, but gain Micro essence for upgrades.</button>
