--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                                 <button class="button" onclick="step()">Multiply the number by <div id="multDisplay">1.5</div> for 3 Click Points</button>
                                 You have <div id="clickPoints">0</div> Click Points.
                                 You are gaining <div id = 'cpPerSec'>1</div> per second
-                                Your max Click Points id <div id = 'maxCP'>3</div>
+                                Your max Click Points is <div id = 'maxCP'>3</div>
                         </div>
                         <div id = 'numberUpgrades'>
                                 <button class = 'button' onclick = 'numUpgrade()'>Increase growth rate by 0.25 percent. Cost: Divides your number by<div id = 'numCost'>1000</div></button>
