--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                                 <button class = 'button' onclick = 'numUpgrade()'>Increase growth rate by 0.25 percent. Cost: Divides your number by<div id = 'numCost'>1000</div></button>
                                 <button class = 'button' onclick = 'maxCPUpgrade()'>Increase your max CP by 1. Cost: Divides your number by <div id = 'maxCPCost'>1000</div></button>
                                 <button class = 'button' onclick = 'CPSecUpgrade()'>Increase your CP/sec by 1. Cost: Divides your number by <div id = 'secCPCost'>10B</div></button>
-                                        
+                        </div>                
                         <div id="microPrestigeElement" style="display:none">
                                 Your number has overflowed, you must reset to continue.
                                 <button class="button" onclick="microPrestige()">Reset your number, but gain Micro essence for upgrades.</button>
