--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
                         </div>                
                         <div id="microPrestigeElement" style="display:none">
                                 Your number has overflowed, you must reset to continue.
-                                <button class="button" onclick="microPrestige()">Reset your number, but gain Micro essence for upgrades.</button>
+                                <button class="button" onclick="microPrestige()">Reset your number, but a Micro essence for upgrades.</button>
+                        </div>
+                        <div id = 'Break Numerals' style = 'display:none'>
+                                <button class = 'button' onclick = 'microPrestige()'>Reset your number, but gain <div id = 'ueOnReset'>0</div> Micro Essense</button>
                         </div>
                 </div>
                 <div id="options" style="display:none">
@@ -36,25 +39,43 @@
                         <button class="button" onclick="hardReset()">Reset the game</button>
                         <span id="exportInfo" style="display:none">Here is your export save:<input id="exportSave"></input></span>
                 </div>
-<div id="microprestige" style="display:none">
-<table>
-<tr>
-<td><button class="button" onclick="buyAupg(1)">Increase the base multiplier to 1.8667x.<br>Cost: 1 &micro;E</button></td>
-<td><button class="button" onclick="buyAupg(2)">The number increases 1.2% per order of magnitude, additive.<br>Cost: 1 &micro;E</button></td>
-<td><button class="button" onclick="buyAupg(3)">You can store up to 2 clicks, and have it act as one click.<br>Cost: 2 &micro;E</button></td>
-</tr>
-<tr>
-<td><button class="button" onclick="buyAupg(4)">Increase the base multiplier to 2.5x.<br>Cost: 5 &micro;E</button></td>
-<td><button class="button" onclick="buyAupg(5)">You start micro prestiges with the number equal to 1000.<br>Cost: 10 &micro;E</button></td>
-<td><button class="button" onclick="buyAupg(6)">Increase the base multiplier based on number of micro prestiges.<br>Currently: <span id="A6power">1</span>x.<br>Cost: 18 &micro;E</button></td>
-</tr>
-<tr>
-<td><button class="button" onclick="buyAupg(7)">Increase the base multiplier by 5x if your number is below 1e33.<br>Cost: 50 &micro;E</button></td>
-<td><button class="button" onclick="buyRepeatA()">You gain 10% more &micro;E.<br>Currently: <span id="microEssenceMult">1</span>x.<br>Cost: <span id="RepeatACost">25</span> &micro;E</button></td>
-<td><button class="button" onclick="buyMaxRepeatA()">Max &micro;E Mult</button></td>
-</tr>
-</table>
-</div>
+		<div id="microprestige" style="display:none">
+			<table>
+				<tr>
+					<td><button class="button" onclick="buyAupg(1)">Increase the base multiplier to 1.8667x.<br>Cost: 1 &micro;E</button></td>
+					<td><button class="button" onclick="buyAupg(2)">The number increases 1.2% per order of magnitude, additive.<br>Cost: 1 &micro;E</button></td>
+					<td><button class="button" onclick="buyAupg(3)">You can store up to 2 clicks, and have it act as one click.<br>Cost: 2 &micro;E</button></td>
+				</tr>
+				<tr>
+					<td><button class="button" onclick="buyAupg(4)">Increase the base multiplier to 2.5x.<br>Cost: 5 &micro;E</button></td>
+					<td><button class="button" onclick="buyAupg(5)">You start micro prestiges with the number equal to 1000.<br>Cost: 10 &micro;E</button></td>
+					<td><button class="button" onclick="buyAupg(6)">Increase the base multiplier based on number of micro prestiges.<br>Currently: <span id="A6power">1</span>x.<br>Cost: 18 &micro;E</button></td>
+				</tr>
+				<tr>
+					<td><button class="button" onclick="buyAupg(7)">Increase the base multiplier by 5x if your number is below 1e33.<br>Cost: 50 &micro;E</button></td>
+					<td><button class="button" onclick="buyRepeatA()">You gain 10% more &micro;E.<br>Currently: <span id="microEssenceMult">1</span>x.<br>Cost: <span id="RepeatACost">25</span> &micro;E</button></td>
+					<td><button class="button" onclick="buyMaxRepeatA()">Max &micro;E Mult</button></td>
+				</tr>
+			</table>
+		</div>
+		<div id = 'breaknumerals' style = 'display:none'>
+			<table>
+				<tr>
+					<td><button class = 'button' onclick = 'buyBupg(1)'>Increase the base multiplier to 3x Cost:160</button></td>
+					<td><button class = 'button' onclick = 'buyBupg(2)'>Increase the base multiplier to 3x</button></td>
+					<td><button class = 'button' onclick = 'buyBupg(3)'>Increase the base multiplier to 3x</button></td>
+				</tr>
+				<tr>
+					<td><button class = 'button' onclick = 'buyBupg(4)'>Increase the base multiplier to 3x</button></td>
+					<td><button class = 'button' onclick = 'buyBupg(5)'>Increase the base multiplier to 3x</button></td>
+					<td><button class = 'button' onclick = 'buyBupg(6)'>Increase the base multiplier to 3x</button></td>
+				</tr>
+				<tr>
+					<td><button class = 'button' onclick = 'buyBupg(7)'>Increase the base multiplier to 3x</button></td>
+					<td><button class = 'button' onclick = 'buyBupg(8)'>Increase the base multiplier to 3x</button></td>
+					<td><button class = 'button' onclick = 'buyBupg(9)'>Increase the base multiplier to 3x</button></td>
+				</tr>
+					
         </body>
 </html>
 
