--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
 		<div id = 'breaknumerals' style = 'display:none'>
 			<table>
 				<tr>
-					<td><button class = 'button' onclick = 'buyBupg(1)'>Increase the base multiplier to 3x Cost:160</button></td>
-					<td><button class = 'button' onclick = 'buyBupg(2)'>Increase the base multiplier to 3x</button></td>
-					<td><button class = 'button' onclick = 'buyBupg(3)'>Increase the base multiplier to 3x</button></td>
+					<td><button class = 'button' onclick = 'buyBupg(1)'>Increase the base multiplier to 3x Cost:160 &micro;E</button></td>
+					<td><button class = 'button' onclick = 'buyBupg(2)'>You start with <div id = 'B2Effect'>10B</div> Cost: 350 &micro;E</button></td>
+					<td><button class = 'button' onclick = 'buyBupg(3)'>The growth factor is higher based on the order of magnitudes the number has (1OoM=1.5%, 3OoM=3%…). Removes the effect of A2. Cost: 720 µE</button></td>
 				</tr>
 				<tr>
-					<td><button class = 'button' onclick = 'buyBupg(4)'>Increase the base multiplier to 3x</button></td>
-					<td><button class = 'button' onclick = 'buyBupg(5)'>Increase the base multiplier to 3x</button></td>
-					<td><button class = 'button' onclick = 'buyBupg(6)'>Increase the base multiplier to 3x</button></td>
+					<td><button class = 'button' onclick = 'buyBupg(4)'>The growth factor is higher based on the amount of µE you have (1+(log(µE+1))/300). Cost: <div id = 'B4Cost'>1.5K</div> µE</button></td>
+					<td><button class = 'button' onclick = 'buyBupg(5)'>Increase base growth factor to 4x, requires B1. Cost: <div id = 'B5Cost'>4K</div> µE</button></td>
+					<td><button class = 'button' onclick = 'buyBupg(6)'>You get 1 µE every button click. Cost: <div id = 'B6Cost'>18K</div> µE</button></td>
 				</tr>
 				<tr>
-					<td><button class = 'button' onclick = 'buyBupg(7)'>Increase the base multiplier to 3x</button></td>
-					<td><button class = 'button' onclick = 'buyBupg(8)'>Increase the base multiplier to 3x</button></td>
-					<td><button class = 'button' onclick = 'buyBupg(9)'>Increase the base multiplier to 3x</button></td>
+					<td><button class = 'button' onclick = 'buyBupg(7)'>The growth factor is higher based on total button clicks (1+(log(clicks+1))/310). Cost: <div id = 'B7Cost'>100K</div> µE</button></td>
+					<td><button class = 'button' onclick = 'buyBupg(8)'> You now gain 1.5 CP/s. Cost: <div id = 'B8Cost'>240K</div> µE</button></td>
+					<td><button class = 'button' onclick = 'buyBupg(9)'>Unlock button autoclicker. Cost: <div id = 'B9Cost'>800K</div> µE</button></td>
 				</tr>
 					
         </body>
