--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<tr>
 					<td><button class="button" onclick="buyAupg(1)">Increase the base multiplier to 1.8667x.<br>Cost: 1 &micro;E</button></td>
 					<td><button class="button" onclick="buyAupg(2)">The number increases 1.2% per order of magnitude, additive.<br>Cost: 1 &micro;E</button></td>
-					<td><button class="button" onclick="buyAupg(3)">You can store up to 2 clicks, and have it act as one click.<br>Cost: 2 &micro;E</button></td>
+					<td><button class="button" onclick="buyAupg(3)">Max CP is doubled<br>Cost: 2 &micro;E</button></td>
 				</tr>
 				<tr>
 					<td><button class="button" onclick="buyAupg(4)">Increase the base multiplier to 2.5x.<br>Cost: 5 &micro;E</button></td>
