--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
         <head>
                 <title>Exponent Madness</title>
+		<script src='break_infinity.js'></script>
                 <script src= "main.js"></script>
                 <link rel="stylesheet" type="text/css" href="style.css">
-		<script src='path/to/break_infinity.js'></script>
         </head>
         <body onload="init()">
                 <p>Number: <div id="numDisplay">1</div></p>
